fixing overflow: hidden issue when returning to main page

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,6 +12,7 @@ body {
   background: rgb(239,246,250);
   margin: 0;
   padding: 0;
+  overflow: visible;
 }
 /* }
 article,
